--- a/config/myclash.ini
+++ b/config/myclash.ini
@@ -10,7 +10,7 @@
 
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
-ruleset=🛑 全球拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
+ruleset=🍃 应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=🍃 应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 ruleset=📢 校园谷歌,https://raw.githubusercontent.com/yuanbofang/clash/main/Ruleset/school.list
 ruleset=📋 学术网站,https://raw.githubusercontent.com/yuanbofang/clash/main/Ruleset/knowledge.list
@@ -35,7 +35,7 @@ custom_proxy_group=📢 校园谷歌`select`[]🚀 节点选择`[]DIRECT`.*
 custom_proxy_group=📋 学术网站`select`[]DIRECT`[]🚀 节点选择`.*
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
 ;custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
-;custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
+custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
 
 enable_rule_generator=true
